2007-05-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-store.c:
	* libempathy-gtk/gossip-preferences.c:
	* libempathy-gtk/gossip-contact-list-store.h:
	* libempathy-gtk/gossip-contact-list.c:
	* libempathy-gtk/gossip-contact-list.h:
	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/gossip-contact-list-model.c:
	* libempathy-gtk/gossip-contact-list-model.h:
	* libempathy-gtk/Makefile.am:
	* libempathy/empathy-marshal.list: Split GossipContactList into
	two objects: GossipContactListStore inheriting from GtkTreeStore and
	GossipContactListView inheriting from GtkTreeView. This makes
	easier to build new UI widgets reusing the GtkTreeModel.

2007-05-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-idle.c: Auto away when session id idle, instead of
	when screensaver is active.

2007-05-18  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-private-chat.h:
	* libempathy-gtk/gossip-contact-list.c:
	* libempathy-gtk/gossip-chat.c:
	* libempathy-gtk/gossip-chat.h:
	* libempathy-gtk/gossip-chat-window.c:
	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/gossip-chat-view.c:
	* libempathy-gtk/gossip-private-chat.c:
	* src/empathy-chat-main.c:
	* libempathy/gossip-utils.c:
	* libempathy/gossip-contact.h:
	* libempathy/empathy-tp-chat.c:
	* libempathy/gossip-utils.h:
	* libempathy/empathy-contact-manager.c:
	* libempathy/empathy-contact-manager.h:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/empathy-tp-contact-list.h:
	* libempathy/empathy-tp-chatroom.c:
	* libempathy/empathy-tp-chatroom.h:
	* libempathy/empathy-contact-list.c:
	* libempathy/empathy-contact-list.h:
	* libempathy/Makefile.am:
	* libempathy/gossip-contact.c: EmpathyContactList is now an interface
	implemented by EmpathyTpContactList, EmpathyContactManager and
	EmpathyTpChatroom. GossipContactList use that interface to display a 
	treeview.

2007-05-17  Xavier Claessens  <xclaesse@gmail.com>
