@@ -2,12 +2,12 @@ Things you can do if you want to help:
 
  - Rename all files and functions name to use the empathy namespace.
  - Porting gossip-account-widget-*.{c,h} from gossip project (Guillaume is already working on IRC widget).
- - Make a EmpathyTpChatroom object inherited from EmpathyTpChat and adding support for topic, invite, members list, etc.
  - Porting various UI widgets from gossip to libempathy-gtk for contact info, adding contact, personal info, etc.
  - GtkWidget-ify gossip widgets imported in libempathy-gtk. Actually most window/dialog do not inherit from GtkWindow/GtkDialog...
- - Fix setting subscription for contacts in EmpathyContactList.
- - Write a MC plugin to filter channels before dispatching them. For example we need a GtkStatusIcon that blink when an event arrives (text/voip/ft channel) and tells the MC to dispatch the channel only when the user clicked the icon. Like in gossip.
- - Make use of NetworkManager and gnome-screensaver to set the presence
+ - Fix setting subscription for contacts in EmpathyTpContactList.
+ - Filter channels before dispatching them. For example we need a GtkStatusIcon that blink when an event arrives (text/voip/ft channel) and tells the MC to dispatch the channel only when the user clicked the icon. Like in gossip. For that we need a filter DBus API in MC, not yet written.
+ - Make use of NetworkManager to set the presence
+ - Remove Quit option everywhere, empathy is a session service and shouldn't be leaved.
  - Testing and Bugfixing.
 
 SoC projects:
