@@ -9,8 +9,6 @@ noinst_LTLIBRARIES = libempathy-gtk.la
 libempathy_gtk_la_SOURCES =             					\
 	ephy-spinner.c				ephy-spinner.h			\
 	empathy-images.h							\
-	gossip-contact-list-store.c		gossip-contact-list-store.h	\
-	gossip-contact-list-view.c		gossip-contact-list-view.h	\
 	empathy-main-window.c			empathy-main-window.h		\
 	empathy-status-icon.c			empathy-status-icon.h		\
 	gossip-accounts-dialog.c		gossip-accounts-dialog.h	\
@@ -21,6 +19,8 @@ libempathy_gtk_la_SOURCES =             					\
 	gossip-cell-renderer-text.c		gossip-cell-renderer-text.h	\
 	gossip-spell.c				gossip-spell.h			\
 	gossip-contact-groups.c			gossip-contact-groups.h		\
+	gossip-contact-list-store.c		gossip-contact-list-store.h	\
+	gossip-contact-list-view.c		gossip-contact-list-view.h	\
 	gossip-preferences.c			gossip-preferences.h		\
 	gossip-theme-manager.c			gossip-theme-manager.h		\
 	gossip-chat-window.c			gossip-chat-window.h		\
@@ -50,8 +50,8 @@ glade_DATA = 					\
 	gossip-chat.glade
 
 dtddir = $(datadir)/empathy
-dtd_DATA = 									\
-	gossip-status-presets.dtd						\
+dtd_DATA = 					\
+	gossip-status-presets.dtd		\
 	gossip-contact-groups.dtd
 
 
